--- a/form_JS.html
+++ b/form_JS.html
@@ -60,15 +60,15 @@
     <div class="row down" id="therow">
       <div class="col-lg-4 first_col">
           <div class="form-group">
-              <input type="checkbox"id="shownum"> 
-              <input type="checkbox"id="shownum">    
+              <input type="checkbox" id="showage" onChange="shownum()"> 
+              <input type="checkbox"id="showcolor">    
               </div>
-        <div class="form-group"style="display:none">
+        <div class="form-group"style="display:none" id="age">
           <input type="number" id="inside">  
         <button type="submpit" class="btn btn-primary btn-lg btn-block" >press to insert to gallery</button>
           </div>
           <div class="form-group">
-          <input type="color" id="inside"style="display:none"> 
+          <input type="color" id="inside"style="display:none" id="color"> 
         <button type="submpit" class="btn btn-primary btn-lg btn-block"style="display:none">press to insert to gallery</button>
        </div>
       </div>
