--- a/form_JS.html
+++ b/form_JS.html
@@ -59,17 +59,20 @@
 
     <div class="row down" id="therow">
       <div class="col-lg-4 first_col">
+        <!-- checkbox -->
           <div class="form-group">
               <input type="checkbox" id="showage" onChange="shownum()"> 
-              <input type="checkbox"id="showcolor">    
+              <input type="checkbox"id="showcolor"onChange="colors()">    
               </div>
+              <!-- formage -->
         <div class="form-group"style="display:none" id="age">
-          <input type="number" id="inside">  
+          <input type="number">  
         <button type="submpit" class="btn btn-primary btn-lg btn-block" >press to insert to gallery</button>
           </div>
-          <div class="form-group">
-          <input type="color" id="inside"style="display:none" id="color"> 
-        <button type="submpit" class="btn btn-primary btn-lg btn-block"style="display:none">press to insert to gallery</button>
+          <!-- formcolor -->
+          <div class="form-group"style="display:none"  id="color">
+          <input type="color"> 
+        <button type="submpit" class="btn btn-primary btn-lg btn-block">press to insert to gallery</button>
        </div>
       </div>
       
